# la-stopwatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: publish_package.yml  python-publish.yml  python-test.yml
la_stopwatch/: __init__.py  abstraction.py  async_stopwatch.py  async_stopwatch_ns.py  stopwatch.py  stopwatch_ns.py  utility.py
tests/: test_async_decorator.py  test_context_manager.py  test_context_manager_arguments.py  test_context_manager_callback.py  test_context_manager_with.py  test_decorator.py  test_decorator_arguments.py  test_decorator_callback.py  test_decorator_chain.py  test_decorator_return.py  test_decorator_two_times.py  test_duration.py  test_log.py  test_readme.py  test_record.py  test_reset.py
